--- a/version 2/requirements.txt
+++ b/version 2/requirements.txt
@@ -1,6 +1,6 @@
-streamlit 
-langchain
-transformers
-torch
-base64
-os
+streamlit ==  1.30.0
+langchain == 0.1.0
+langchain-community ==  0.0.10
+transformers == 4.36.2
+torch == 2.1.2
+
